--- a/.github/workflows/master_droidhub.yml
+++ b/.github/workflows/master_droidhub.yml
@@ -10,6 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
   deploy:
     runs-on: windows-latest
     environment:
@@ -24,4 +30,4 @@ jobs:
           app-name: 'droidhub'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E67A34B00E704586A99DC73945E87C90 }}
-          package: '*'
+          package: .
