--- a/.github/workflows/master_droidhub.yml
+++ b/.github/workflows/master_droidhub.yml
@@ -18,6 +18,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
